HTML + CSS : initial

--- a/style.css
+++ b/style.css
@@ -1,4 +1,75 @@
-html {
-  height: 100%;
-  width: 100%;
+body {
+  width: 300px;
+  display: block;
+  position: relative;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: beige;
+  
+}
+
+header {
+  background-color: salmon;
+  text-align: center;
+  line-height: 50px;
+  height: 50px;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
+  font-size: 25px;
+  color: white;
+}
+
+#list {
+  display: flex;
+  background-color: white;
+  align-items: center;
+}
+.todo {
+  display: flex;
+  position: justify-content;
+  height: 400px;
+  margin: 10px 1px;
+  list-style: none;
+}
+.item-name {
+  width: 200px;
+  background-color: salmon;
+}
+.fa-trash-can {
+  width: 25px;
+}
+.fa-solid fa-trash-can:hover {
+  background-color: pink;
+}
+.fa-trash-can:hover {
+  background-color: salmon;
+}
+#bottom {
+  background-color: salmon;
+  height: 80px;
+  border-bottom-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+#input {
+  width: 300px;
+  padding: 10px;
+  border: 1px salmon;
+}
+
+#add {
+  background-color: white;
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 100%;
+  display: flex;
+  margin: auto;
+}
+.fa-plus {
+  color: pink;
+  font-size: 35px;
+  line-height: 50px;
+  margin: auto;
 }
