--- a/style.css
+++ b/style.css
@@ -20,56 +20,96 @@ header {
   color: white;
 }
 
+h3 {
+  font-size: 20px;
+  color: salmon;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 0px;
+  margin: 0;
+}
 #list {
-  display: flex;
+  display: block;
   background-color: white;
   align-items: center;
 }
-.todo {
+
+.incomplete-tasks input[type="checkbox"],
+.incomplete-tasks input[type="checkbox"]:checked + label, 
+.complete-tasks input[type="checkbox"],
+.complete-tasks input[type="checkbox"]:checked + label{
+	opacity: .5;
+	text-decoration: line-through;
+  text-decoration-color: red;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 3px;
+}
+
+.todo-box {
+  width: 280px;
   display: flex;
-  position: justify-content;
-  height: 400px;
-  margin: 10px 1px;
+  position: space-between;
+  margin: auto;
+  padding: 15px 1px;
   list-style: none;
+  align-items: center;
 }
+
 .item-name {
-  width: 200px;
-  background-color: salmon;
+  display: inline-block;
+  background-color: beige;
+  padding: 5px;
+  margin: 3px;
 }
-.fa-trash-can {
-  width: 25px;
+
+.edit, .trash {
+  border: 3px salmon;
+  background-color: transparent;
+  font-size: 18px;
+  color: salmon;
+  padding: 5px;
 }
-.fa-solid fa-trash-can:hover {
-  background-color: pink;
+
+.edit:hover, 
+.trash:hover {
+  color: red;
+  cursor: pointer;
 }
-.fa-trash-can:hover {
-  background-color: salmon;
-}
+
 #bottom {
   background-color: salmon;
-  height: 80px;
+  height: 100px;
   border-bottom-right-radius: 30px;
   border-bottom-left-radius: 30px;
+  align-items: center;
+  margin: auto;
 }
 
-#input {
-  width: 300px;
+#inputText {
+  width: 280px;
   padding: 10px;
   border: 1px salmon;
+  background-color: pink;
 }
 
-#add {
+#addBTN {
   background-color: white;
   width: 50px;
   height: 50px;
   border: none;
   border-radius: 100%;
   display: flex;
+  align-items: center;
   margin: auto;
+  margin-top: 8px;
 }
 .fa-plus {
   color: pink;
   font-size: 35px;
   line-height: 50px;
   margin: auto;
+}
+
+i:hover {
+  cursor: pointer;
 }
