--- a/style.css
+++ b/style.css
@@ -1,85 +1,94 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul {
-    padding: 0;
+  padding: 0;
 }
 
 body {
-    background-color: beige;
-    text-align: center;
+  background-color: beige;
+  text-align: center;
 }
 
 .list {
-    width: 400px;
-    margin: auto;
-    background-color: white;
+  width: 400px;
+  margin: auto;
+  background-color: white;
 }
 
 .header {
-    height: 48px;
-    padding: 8px;
-    font-size: 24px;
-    background-color: salmon;
-    border-radius: 20px 20px 0 0;
-    color: white;
+  height: 48px;
+  padding: 8px;
+  font-size: 24px;
+  background-color: salmon;
+  border-radius: 20px 20px 0 0;
+  color: white;
 }
 
 .items {
-    height: 500px;
-    overflow-y: auto;
+  height: 500px;
+  overflow-y: auto;
 }
 
 .item {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px 32px;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 32px;
 }
 
 .item_delete {
   color: pink;
-    font-size: 16px;
-    transition: all 300ms ease-in;
+  font-size: 16px;
+  transition: all 300ms ease-in;
   border: none;
   background-color: transparent;
 }
 .item_delete:hover {
-    color: red;
-    transform: scale(1.1);
+  color: red;
+  transform: scale(1.1);
+}
+
+.item input[type='checkbox'],
+.item input[type='checkbox']:checked + label {
+  opacity: 0.5;
+  text-decoration: line-through;
+  text-decoration-color: red;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 3px;
 }
 
 .item_divider {
-    width: 90%;
-    height: 1px;
-    background-color: lightgray;
-    margin: auto;
+  width: 90%;
+  height: 1px;
+  background-color: lightgray;
+  margin: auto;
 }
 
 .footer {
-    background-color: salmon;
-    border-radius: 0 0 20px 20px;
+  background-color: salmon;
+  border-radius: 0 0 20px 20px;
 }
 
 .footer_input {
-    width: 100%;
-    height: 32px;
-    border: none;
-    outline: none;
-    font-size: 24px;
-    padding: 0 16px;
+  width: 100%;
+  height: 32px;
+  border: none;
+  outline: none;
+  font-size: 24px;
+  padding: 0 16px;
 }
 
 .footer_button {
-    width: 48px;
-    height: 48px;
-    font-size: 28px;
-    background-color: white;
-    border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  font-size: 28px;
+  background-color: white;
+  border-radius: 50%;
   border: none;
-    color: salmon;
+  color: salmon;
 }
 
 .footer_button:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
