JS: Edit initial

--- a/style.css
+++ b/style.css
@@ -34,22 +34,26 @@ body {
 .item {
   display: flex;
   justify-content: space-between;
-  padding: 8px 32px;
+  padding: 8px;
 }
 
-.item_delete {
+
+.item_edit, .item_delete {
   color: pink;
   font-size: 16px;
   transition: all 300ms ease-in;
   border: none;
   background-color: transparent;
 }
+
+.item_edit:hover,
 .item_delete:hover {
   color: red;
   transform: scale(1.1);
+  cursor: pointer;
 }
 
-.item input[type='checkbox'],
+
 .item input[type='checkbox']:checked + label {
   opacity: 0.5;
   text-decoration: line-through;
@@ -57,6 +61,12 @@ body {
   text-decoration-style: dashed;
   text-decoration-thickness: 3px;
 }
+
+
+.footer_input::placeholder{
+    color: var(--primarytext);
+}
+
 
 .item_divider {
   width: 90%;
