--- a/style.css
+++ b/style.css
@@ -61,12 +61,31 @@ body {
   cursor: pointer;
 }
 
-.item input[type='checkbox']:checked + label {
+ul li.checked {
   opacity: 0.5;
   text-decoration: line-through;
   text-decoration-color: red;
   text-decoration-style: dashed;
   text-decoration-thickness: 0.2rem;
+}
+
+.fa-circle-check.clicked {
+  font-weight: 600;
+}
+
+.list__done {
+  padding: 0 1.2rem;
+  color: salmon;
+  font-size: 1rem;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.list__done:hover {
+  transform: scale(1.2);
+  color: lightblue;
 }
 
 .item_divider {
@@ -109,5 +128,5 @@ body {
 }
 
 .footer_button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
